# asana2calendar

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  config.example.ini  main.py  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
asana2calendar/: __about__.py  __main__.py  asana2calendar.py  create_config.py  create_db.py  parse_config.py  sync.py
asana2calendar/core/: config.py  database.py  sync.py
asana2calendar/plugins/: asana.py  asana_calendar.py  base.py  caldav.py  caldav_calendar.py
tests/: __init__.py  test_asana2calendar.py  test_config.py  test_database.py
