[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asana2calendar"
dynamic = ["version"]
description = "An application for two-way sync between asana projects and caldav calendars."
readme = "README.md"
license = { text = "GNU General Public License v3" }
requires-python = ">=3.7"
authors = [{ name = "Dylan Barker", email = "dylan@dylantjb.com" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Communications",
    "Topic :: Office/Business :: Scheduling"
]
dependencies = [
    "asana~=3.1.1",
    "caldav~=1.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=21.7.0",
    "isort>=5.12.0",
    "pylint>=2.16.3",
    "pyright>=1.1.298"
]
test = [
    "coverage[toml]",
    "pytest>=6.2.4",
    "pytest-cov>=2.10.1",
    "pytest-mock>=3.10.0",
]

[project.urls]
Documentation = "https://github.com/dylantjb/asana2calendar"
Issues = "https://github.com/dylantjb/asana2calendar/issues"
Source = "https://github.com/dylantjb/asana2calendar"

[project.scripts]
asana2calendar = "asana2calendar.__main__:main"

[tool.pylint.'MESSAGES CONTROL']
disable = "W0621, R0903"

[tool.hatch.version]
path = "asana2calendar/__about__.py"

[tool.hatch.build]
include = [
  "asana2calendar/**/*.py",
  "/tests",
]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/CONTRIBUTING.md",
  "/asana2calendar",
  "/tests",
]

